# degreecompass-backend-flask

./: .env.example  .gitignore  README.md  app.py  degree-compass-postgres-db.session.sql  docker-compose.yml  parse_data.py  postman_collection.json  pyproject.toml  run-backend.sh
config/: db_config.py  logging_config.py
data/: degree-compass-postgres-db.session.sql  parse_raw_data.py
data/migrations/: create_major_qa_table.sql  migration_scripts.sql
data/raw_data/: create_table_for_major_data.sql  major_data.txt
prompts/: major_prompts.py
repositories/: major_repository.py
routes/: major_routes.py
scripts/: README.md  get-all-major-qa-and-intro.py  major-tagger-claude-35sonnet.py  parse_data.py
scripts/data/: postman_collection.json
services/: db_service.py  llm_service.py  major_service.py  sql_parser_service.py
