[tool.poetry]
name = "flask-degree-compass"
version = "0.1.0"
description = ""
authors = ["0xMichaelRan <michaelran16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-cors = "^5.0.0"
psycopg2 = "^2.9.3"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
